Fix API compatibility: replace getFirst() with get(0)
ArrayList.getFirst() requires API 35 but minSdk is now 26.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>